fix icon bleed fix toggle on navigation fix sidebar location in app fix sidebar styles

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -23,6 +23,6 @@ a {
   
   section.expanded {
     height: 100vh;
-    width: 60vw;
+    width: 100vw;
   }
 }
